[package]
name = "wasmi-validation"
version = "0.4.1"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/axia-tech/wasmi"
description = "Wasm code validator"

[dependencies]
axia-wasm = { git = "https://github.com/axia-tech/axia-wasm", version = "0.42.2", branch = "v0.42.2", default-features = false }

[dev-dependencies]
assert_matches = "1.1"

[features]
default = ["std"]
std = ["axia-wasm/std"]
core = []
